--- a/Day2_Code/package.json
+++ b/Day2_Code/package.json
@@ -1,17 +1,14 @@
 {
-    "name": "day2_code",
+    "name": "base",
     "version": "1.0.0",
-    "description": "",
     "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
+    "author": "arminchai",
+    "license": "MIT",
     "devDependencies": {
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2"
+    },
+    "scripts": {
+        "build": "webpack"
     }
 }
