--- a/Day2_Code/03.使用webpack加载器打包CSS文件/package.json
+++ b/Day2_Code/03.使用webpack加载器打包CSS文件/package.json
@@ -1,12 +1,17 @@
 {
-    "name": "base",
+    "name": "change",
     "version": "1.0.0",
     "main": "index.js",
-    "author": "arminchai",
     "license": "MIT",
     "devDependencies": {
+        "css-loader": "^6.7.1",
+        "html-webpack-plugin": "^5.5.0",
+        "style-loader": "^3.3.1",
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2"
+    },
+    "dependencies": {
+        "jquery": "^3.6.0"
     },
     "scripts": {
         "build": "webpack"
